--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
             <p class="we">We are your MateDesigners</p>
         </div>
         <div class="lot">
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2.png" alt="dwdawds"><b>Ghost
-                    UXWriter</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2.png" alt="dwdawds"><p class="p11">Ghost
+                    UXWriter</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and
                     only God knows whom else. Out of the question it’s useful and interesting experience, but when we
                     have some time limits we need a special magic.</p>
             </div>
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (6).png" alt="dwdawds"><b>Content
-                    Reel</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (6).png" alt="dwdawds"><p class="p11">Content
+                    Reel</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and
                     only God knows whom else. Out of the question it’s useful and interesting experience, but when we
                     have some time limits we need a special magic.</p>
             </div>
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (1).png" alt="dwdawds"><b>Status
-                    Anotations</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (1).png" alt="dwdawds"><p class="p11">Status
+                    Anotations</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and
                     only God knows whom else. Out of the question it’s useful and interesting experience, but when we
                     have some time limits we need a special magic.</p>
             </div>
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (7).png" alt="dwdawds"><b>Ghost
-                    UXWriter</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (7).png" alt="dwdawds"><p class="p11">Ghost
+                    UXWriter</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and
                     only God knows whom else. Out of the question it’s useful and interesting experience, but when we
                     have some time limits we need a special magic.</p>
             </div>
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (2).png" alt="dwdawds"><b>Content
-                    Reel</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (2).png" alt="dwdawds"><p class="p11">Content
+                    Reel</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and only God knows whom else. Out of the question it’s useful and interesting experience, but when we have some time limits we need a special magic.</p>
             </div>
-            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (5).png" alt="dwdawds"><b>Status
-                    Anotations</b>
+            <div class="div10"><img class="img10" src="images/assets/Rectangle 2 (5).png" alt="dwdawds"><p class="p11">Status
+                    Anotations</p>
                 <p class="p10">All of us, designers, at least once per career became an illustrator, copyrighter and only God knows whom else. Out of the question it’s useful and interesting experience, but when we have some time limits we need a special magic.</p>
             </div>
         </div>
     </section>
-    <footer>
-    <div class="div3">
+ <footer>
+    <div class="div11">
         <img class="img1" src="./images/assets/Group 1 (2).jpg" alt="rr3w">
         <div class="p1">
             <p class="p2">Home</p>
@@ -70,7 +70,8 @@
             <p class="p2">Work</p>
             <p class="p2">Blog</p>
         </div>
-    </footer>
+    </div>
+ </footer>
     </div>
 
 </body>
